<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="22dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center_horizontal"
        android:text=""
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/profile_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profile_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text=""
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/change_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <Button
        android:id="@+id/change_email"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/primary"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/change_email"
        app:layout_constraintEnd_toEndOf="@+id/change_password"
        app:layout_constraintStart_toStartOf="@+id/change_password"
        app:layout_constraintTop_toBottomOf="@+id/profile_email" />

    <Button
        android:id="@+id/change_password"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_marginTop="96dp"
        android:backgroundTint="@color/primary"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/change_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_email" />

    <Button
        android:id="@+id/logout"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginBottom="92dp"
        android:backgroundTint="@color/red"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/log_out"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>